syntax = "proto3";
package services;

import "google/api/annotations.proto";
message ProdRequest{
    int32 prod_id=1;
}

message ProdResponse{
    int32 prod_stock=100;
}

service ProdService{
    rpc getProdStk(ProdRequest) returns (ProdResponse){
        option (google.api.http)={
            get:"/v1/prod/{prod_id}"
        };
    };
}